# bug-free-meme

v2/v2/backend/: README.md  pyproject.toml  requirements.txt  run.bat  run_bot.bat
v2/v2/backend/alembic/: env.py
v2/v2/backend/alembic/versions/: 002_domain_improvements.py  003_auth_lifecycle.py  004_payment_settings.py  005_notification_fields.py
v2/v2/backend/app/: README.md  __init__.py  main.py
v2/v2/backend/app/adapters/: telegram.py
v2/v2/backend/app/bot/: __init__.py  runner.py
v2/v2/backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  permissions.py  security_middleware.py
v2/v2/backend/app/models/: README.md  models.py
v2/v2/backend/app/repositories/: README.md  __init__.py  achievement_repository.py  admin_action_repository.py  announcement_repository.py  audit_repository.py  base_repository.py  called_number_repository.py  daily_reward_repository.py  deposit_repository.py  leaderboard_repository.py  notification_preference_repository.py  notification_repository.py  payment_settings_repository.py  prize_payout_repository.py  referral_repository.py  room_repository.py  room_template_repository.py  session_repository.py  settings_repository.py  statistics_repository.py  system_log_repository.py  user_profile_repository.py  user_repository.py  wallet_repository.py  withdrawal_repository.py
v2/v2/backend/app/schemas/: README.md  admin.py  game.py  wallet.py
v2/v2/backend/app/services/: README.md  __init__.py  achievement_service.py  audit_service.py  background_workers.py  card_service.py  deposit_service.py  game_service.py  profile_service.py  referral_service.py  settings_service.py  telegram_bot_service.py  transfer_service.py  wallet_service.py  withdrawal_service.py
v2/v2/backend/tests/: test_auth_extended.py  test_auth_service.py  test_room_service.py  test_statistics_service.py  test_wallet_service.py
v2/v2/engine/: ENGINE_README.md  pyproject.toml
v2/v2/engine/tests/: __init__.py  test_engine.py  test_engine_edge_cases.py  test_engine_v2.py  test_rule_engine.py
(+217 files in other folders)
